Procesamiento de Dataset para tener trayectorias numericas

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "id": "15a4716b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "4d63da52",
    "metadata": {},
    "outputs": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "5a96b906",
    "metadata": {},
    "outputs": [
@@ -252,7 +253,7 @@
        "[5 rows x 187 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "id": "c9c83171",
    "metadata": {},
    "outputs": [
@@ -323,7 +324,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "id": "4fa00820",
    "metadata": {},
    "outputs": [
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "45d137d6",
    "metadata": {},
    "outputs": [
@@ -446,7 +447,7 @@
        "4213           83724.0  [MLB, SELLER DEV, green, 183.0, 6007.626783507..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "abfe5b3f",
    "metadata": {},
    "outputs": [
@@ -569,7 +570,7 @@
        "4  [[MLA, SELLER DEV, green_silver, 1137.0, 53218...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "5f71ba82",
    "metadata": {},
    "outputs": [
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "5bd08cd6",
    "metadata": {},
    "outputs": [
@@ -680,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "c4a62124",
    "metadata": {},
    "outputs": [
@@ -688,6 +689,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Mapeo de acciones: {'ACQUISITION_GENERAL_ML_ADS': np.int64(0), 'ACTIVATE_FLEX_SELLER': np.int64(1), 'ACTIVATE_FLEX_SHIPPING': np.int64(2), 'ADD_FLEX_ZONES_V2': np.int64(3), 'BAD_SHOPPING_EXPERIENCE': np.int64(4), 'BUYBOX_STATUS_ELEGIBLE': np.int64(5), 'BUY_BOX_LOSING_BY_PRICE': np.int64(6), 'CAMPAIGN_3X': np.int64(7), 'CAPACITY_COLECTA': np.int64(8), 'CAPACITY_FLEX': np.int64(9), 'CAPACITY_XDDO': np.int64(10), 'CATALOG_AUTOOPTIN_ITEMS': np.int64(11), 'COMPATIBILITIES_PENDING': np.int64(12), 'CREDIT_FINANCING': np.int64(13), 'CREDIT_PLUS': np.int64(14), 'CREDIT_PLUS_TASA0': np.int64(15), 'CUPONES_CDP': np.int64(16), 'DEALS_TIER_1': np.int64(17), 'DEALS_TIER_2': np.int64(18), 'FBM_DISENGAGEMENT': np.int64(19), 'FBM_DISPOSAL': np.int64(20), 'FBM_IPI_WARNING': np.int64(21), 'FREE_SHIPPING_OFFER': np.int64(22), 'INCOMPLETE_TECHNICAL_SPECIFICATION': np.int64(23), 'MARKETPLACE_CAMPAIGN': np.int64(24), 'METRICAS_DE_STOCK': np.int64(25), 'MIPAGINA': np.int64(26), 'MIPAGINA_2': np.int64(27), 'NEWBIE_WARRANTY_HUNTING': np.int64(28), 'PAUSED_BY_USER_FULFILLMENT': np.int64(29), 'PB_040': np.int64(30), 'POOR_QUALITY_PICTURE': np.int64(31), 'POST_SALE_RG': np.int64(32), 'PREMIUM_LISTING_TYPE': np.int64(33), 'PRICE_MATCHING': np.int64(34), 'PRICING_HIGH_PRICE': np.int64(35), 'PUSH_AUTOMATIC_PRICING': np.int64(36), 'REPUTATION_BAD_SELLERS': np.int64(37), 'REPUTATION_RECOVERY_COLOR': np.int64(38), 'SHORTS_MODIFY_ITEM': np.int64(39), 'SMART_HUNTING_FBM': np.int64(40), 'UNDER_REVIEW': np.int64(41), 'UNDER_REVIEW_CATALOG_OPT_IN': np.int64(42), 'UNDER_REVIEW_DP_TITULO_DESCRIPCION': np.int64(43), 'UNDER_REVIEW_FAKES_ATTRIBUTE': np.int64(44), 'UNDER_REVIEW_FAKES_TITLE': np.int64(45), 'UNIVERSAL_PRODUCT_IDENTIFIER_INCOMPLETE': np.int64(46)}\n",
       "Numéricas procesadas con Log + StandardScaling.\n",
       "Dimension final del vector de estado: 25\n",
       "Variables en el estado: ['ORDERS', 'GMV_USD', 'VISITS_30D', 'CVR_30D', 'SIT_SITE_ID_MCO', 'SIT_SITE_ID_MEC', 'SIT_SITE_ID_MLA', 'SIT_SITE_ID_MLB', 'SIT_SITE_ID_MLC', 'SIT_SITE_ID_MLM', 'SIT_SITE_ID_MLU', 'SIT_SITE_ID_MPE', 'SELLER_SEGMENT_CARTERA GESTIONADA', 'SELLER_SEGMENT_SELLER DEV', 'SELLER_SEGMENT_TO', 'SELLER_SEGMENT_unknown', 'REP_CURRENT_LEVEL_green', 'REP_CURRENT_LEVEL_green_gold', 'REP_CURRENT_LEVEL_green_platinum', 'REP_CURRENT_LEVEL_green_silver', 'REP_CURRENT_LEVEL_light_green', 'REP_CURRENT_LEVEL_orange', 'REP_CURRENT_LEVEL_red', 'REP_CURRENT_LEVEL_unknown', 'REP_CURRENT_LEVEL_yellow']\n",
@@ -696,11 +698,18 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "# 1. Filtramos usuarios válidos (>= 2 interacciones) como acordamos\n",
     "valid_user_ids = df_seq[id_col].unique()\n",
     "df_final = df_clean[df_clean[id_col].isin(valid_user_ids)].copy()\n",
+    "\n",
+    "# --- 0. CODIFICACIÓN DE ACCIONES ---\n",
+    "# Creamos el encoder para mapear strings de acciones a números\n",
+    "le_action = LabelEncoder()\n",
+    "df_final[action_col] = le_action.fit_transform(df_final[action_col])\n",
+    "\n",
+    "# Opcional: Guardate el mapeo por si después querés interpretar resultados\n",
+    "mapping = dict(zip(le_action.classes_, le_action.transform(le_action.classes_)))\n",
+    "print(f\"Mapeo de acciones: {mapping}\")\n",
     "\n",
     "# --- A. TRATAMIENTO DE NUMÉRICAS ---\n",
     "# Separamos las variables en dos grupos según su naturaleza\n",
@@ -730,7 +739,7 @@
     "# Usamos get_dummies. \n",
     "# drop_first=False para darle más información explicita al modelo, \n",
     "# aunque aumente un poco la dimensión.\n",
-    "df_final = pd.get_dummies(df_final, columns=cat_cols, prefix=cat_cols, dtype=float)\n",
+    "df_final = pd.get_dummies(df_final, columns=cat_cols, prefix=cat_cols, dtype=float, drop_first=False)\n",
     "\n",
     "# Identificamos cuáles son las nuevas columnas de estado (Numéricas + Dummies)\n",
     "# Excluimos ID, Time, Action, Reward de esta lista\n",
@@ -742,13 +751,13 @@
     "\n",
     "# --- C. RE-AGRUPACIÓN ---\n",
     "# Actualizamos el vector con las nuevas columnas\n",
-    "df_final['state_vector'] = df_final[state_features_final].values.tolist()\n",
+    "df_final['observations'] = df_final[state_features_final].values.tolist()\n",
     "\n",
     "final_dataset = df_final.groupby(id_col).agg({\n",
     "    time_col: list,\n",
     "    action_col: list, # OJO: ¿Ya convertiste esto a números con LabelEncoder antes?\n",
     "    reward_col: list,\n",
-    "    'state_vector': list\n",
+    "    'observations': list\n",
     "}).reset_index()\n",
     "\n",
     "# Renombrar\n",
@@ -756,7 +765,6 @@
     "    time_col: 'timestamps',\n",
     "    action_col: 'actions',\n",
     "    reward_col: 'rewards',\n",
-    "    'state_vector': 'observations'\n",
     "}, inplace=True)\n",
     "\n",
     "print(\"Dataset listo con Dummies y Scaling Logarítmico.\")"
@@ -764,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "id": "9f37d0cc",
    "metadata": {},
    "outputs": [
@@ -801,7 +809,7 @@
        "      <th>0</th>\n",
        "      <td>62706.0</td>\n",
        "      <td>[2025-07-17T15:39:27.270-0400, 2025-07-17T15:3...</td>\n",
-       "      <td>[ADD_FLEX_ZONES_V2, ADD_FLEX_ZONES_V2]</td>\n",
+       "      <td>[3, 3]</td>\n",
        "      <td>[0.1269863370283323, 0.1269863370283323]</td>\n",
        "      <td>[[0.7857503820786138, 1.065347193416983, -0.01...</td>\n",
        "    </tr>\n",
@@ -809,7 +817,7 @@
        "      <th>1</th>\n",
        "      <td>105815.0</td>\n",
        "      <td>[2025-08-19T12:41:27.840-0400, 2025-08-19T12:4...</td>\n",
-       "      <td>[PRICING_HIGH_PRICE, PRICING_HIGH_PRICE]</td>\n",
+       "      <td>[35, 35]</td>\n",
        "      <td>[-0.2414728651790503, 0.6961654067617704]</td>\n",
        "      <td>[[0.6842381250562125, 0.7787730952401777, 0.53...</td>\n",
        "    </tr>\n",
@@ -817,7 +825,7 @@
        "      <th>2</th>\n",
        "      <td>113570.0</td>\n",
        "      <td>[2025-07-24T09:50:16.688-0400, 2025-09-12T11:1...</td>\n",
-       "      <td>[PRICING_HIGH_PRICE, PAUSED_BY_USER_FULFILLMENT]</td>\n",
+       "      <td>[35, 29]</td>\n",
        "      <td>[-0.5166133670595068, 0.1169561396927816]</td>\n",
        "      <td>[[1.2703287437992625, 1.1007664452421286, 1.04...</td>\n",
        "    </tr>\n",
@@ -825,7 +833,7 @@
        "      <th>3</th>\n",
        "      <td>149799.0</td>\n",
        "      <td>[2025-07-12T09:19:23.615-0400, 2025-07-12T09:1...</td>\n",
-       "      <td>[CUPONES_CDP, CUPONES_CDP]</td>\n",
+       "      <td>[16, 16]</td>\n",
        "      <td>[-0.1979284438234524, -0.1979284438234524]</td>\n",
        "      <td>[[-1.3636302977078034, -1.7349421210652867, -1...</td>\n",
        "    </tr>\n",
@@ -833,7 +841,7 @@
        "      <th>4</th>\n",
        "      <td>172183.0</td>\n",
        "      <td>[2025-08-24T20:00:14.683-0400, 2025-08-24T20:2...</td>\n",
-       "      <td>[ACTIVATE_FLEX_SHIPPING, SHORTS_MODIFY_ITEM]</td>\n",
+       "      <td>[2, 39]</td>\n",
        "      <td>[-0.1586788902843809, -0.6929596291833953]</td>\n",
        "      <td>[[0.9270257209489126, 0.7981246796940512, 0.83...</td>\n",
        "    </tr>\n",
@@ -849,19 +857,12 @@
        "3         149799.0  [2025-07-12T09:19:23.615-0400, 2025-07-12T09:1...   \n",
        "4         172183.0  [2025-08-24T20:00:14.683-0400, 2025-08-24T20:2...   \n",
        "\n",
-       "                                            actions  \\\n",
-       "0            [ADD_FLEX_ZONES_V2, ADD_FLEX_ZONES_V2]   \n",
-       "1          [PRICING_HIGH_PRICE, PRICING_HIGH_PRICE]   \n",
-       "2  [PRICING_HIGH_PRICE, PAUSED_BY_USER_FULFILLMENT]   \n",
-       "3                        [CUPONES_CDP, CUPONES_CDP]   \n",
-       "4      [ACTIVATE_FLEX_SHIPPING, SHORTS_MODIFY_ITEM]   \n",
-       "\n",
-       "                                      rewards  \\\n",
-       "0    [0.1269863370283323, 0.1269863370283323]   \n",
-       "1   [-0.2414728651790503, 0.6961654067617704]   \n",
-       "2   [-0.5166133670595068, 0.1169561396927816]   \n",
-       "3  [-0.1979284438234524, -0.1979284438234524]   \n",
-       "4  [-0.1586788902843809, -0.6929596291833953]   \n",
+       "    actions                                     rewards  \\\n",
+       "0    [3, 3]    [0.1269863370283323, 0.1269863370283323]   \n",
+       "1  [35, 35]   [-0.2414728651790503, 0.6961654067617704]   \n",
+       "2  [35, 29]   [-0.5166133670595068, 0.1169561396927816]   \n",
+       "3  [16, 16]  [-0.1979284438234524, -0.1979284438234524]   \n",
+       "4   [2, 39]  [-0.1586788902843809, -0.6929596291833953]   \n",
        "\n",
        "                                        observations  \n",
        "0  [[0.7857503820786138, 1.065347193416983, -0.01...  \n",
@@ -871,13 +872,24 @@
        "4  [[0.9270257209489126, 0.7981246796940512, 0.83...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "bc1cf910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Usar le_action.inverse_transform para obtener las acciones a partir de los encodings\n",
+    "# acciones_reales = le_action.inverse_transform(final_dataset['actions'][0])"
    ]
   }
  ],
